--- a/src/css/Backdrop.css
+++ b/src/css/Backdrop.css
@@ -7,5 +7,5 @@
     left:0;
     right:0;
     background-color: var(--clr-black-transparent);
-    z-index: 19;
+    z-index: 22;
 }
