--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     padding: 2rem calc( ( 100% - var(--container-width-sm-md) ) / 2 ); ;
-    z-index: 1001;
+    z-index: 21;
     background-color: var(--clr-black);
     border-bottom: 1px solid var(--clr-gray-transparent);
 }
@@ -19,7 +19,7 @@
     left:50%;
     transform: translateX(-50%);
     padding: 2rem calc( ( 100% - var(--container-width-sm-md) ) / 2 ); ;
-    z-index: 1001;
+    z-index: 21;
     border-bottom: 1px solid var(--clr-gray-transparent);
 }
 
